contains toggle button

--- a/index.html
+++ b/index.html
@@ -19,11 +19,33 @@
 			</div>
 		</div> -->
 
+		<h1>Toggle Buttons Group</h1>
+		<div class="k_group_toggle">
+			<input type="radio" name="option" id="option1">
+			<label for="option1" class="k_btn_success">Option 1</label>
+			<input type="radio" name="option" id="option2">
+			<label for="option2" class="k_btn_success">Option 2</label>
+			<input type="radio" name="option" id="option3">
+			<label for="option3" class="k_btn_success">Option 3</label>
+		</div>
+
+		<div class="k_group_toggle">
+			<input type="radio" name="Conf" id="Conf1">
+			<label for="Conf1" class="k_btn_danger" data-icon="&#xf16b;">Dropbox</label>
+			<input type="radio" name="Conf" id="Conf2">
+			<label for="Conf2" class="k_btn_danger" data-icon="&#xf082;">Facebook</label>
+			<input type="radio" name="Conf" id="Conf3">
+			<label for="Conf3" class="k_btn_danger" data-icon="&#xf179;">Apple</label>
+		</div>
+
 		<h1>Input Icon</h1>
-		<div class="k_wrap_txt_icon">
-			<input class="k_txt_default" type="text" placeholder="Search">	
+		<div class="k_wrap_txt_addon">
+			<input class="k_txt_default" type="text" placeholder="Search">
+			<div class="k_addon_txt"></div>
 		</div>	
 
+		
+		<br/><br/><br/>
 		<h1>Buttons</h1>
 
 		<div class="k_btn_default">Default Button</div>
