--- a/index.html
+++ b/index.html
@@ -19,7 +19,34 @@
 			</div>
 		</div> -->
 
-		<h1>Toggle Buttons Group</h1>
+		<h1>Toggle Buttons</h1>
+
+		<input type="checkbox" class="k_switch" name="check1" id="check1">
+		<label for="check1" class="k_btn_success">Option 1</label>
+		<input type="checkbox" class="k_switch" name="check2" id="check2">
+		<label for="check2" class="k_btn_danger">Option 2</label>
+		<input type="checkbox" class="k_switch" name="check3" id="check3">
+		<label for="check3" class="k_btn_info">Option 3</label>
+
+		<h1>ToolBar</h1>
+
+		<div class="k_tool_bar">
+			<div class="k_tool_btn_grp">
+				<div class="k_tool_btn" data-icon="&#xf031;">Text</div>
+				<div class="k_tool_btn" data-icon="&#xf0c5;">Shape</div>
+				<div class="k_tool_btn" data-icon="&#xf03e;">Image</div>
+				<div class="k_tool_btn" data-icon="&#xf0ce;">Table</div>
+				<div class="k_tool_btn" data-icon="&#xf121;">Embed</div>
+			</div>
+			<div class="k_tool_btn_grp">
+				<div class="k_tool_btn" data-icon="&#xf031;">Text</div>
+				<div class="k_tool_btn" data-icon="&#xf0c5;">Shape</div>
+				<div class="k_tool_btn" data-icon="&#xf121;">Embed</div>
+			</div>			
+		</div>
+
+
+		<h1>Option Buttons Group</h1>
 		<div class="k_group_toggle">
 			<input type="radio" name="option" id="option1">
 			<label for="option1" class="k_btn_success">Option 1</label>
