Contains new toolbar

--- a/index.html
+++ b/index.html
@@ -30,19 +30,34 @@
 
 		<h1>ToolBar</h1>
 
-		<div class="k_tool_bar">
-			<div class="k_tool_btn_grp">
-				<div class="k_tool_btn" data-icon="&#xf031;">Text</div>
-				<div class="k_tool_btn" data-icon="&#xf0c5;">Shape</div>
-				<div class="k_tool_btn" data-icon="&#xf03e;">Image</div>
-				<div class="k_tool_btn" data-icon="&#xf0ce;">Table</div>
-				<div class="k_tool_btn" data-icon="&#xf121;">Embed</div>
+		<div class="k_toolbar">
+			<div class="k_toolbar_tools">
+				<div class="k_toolbar_tool" data-icon="&#xf031;">Text</div>	
+				<div class="k_toolbar_tool" data-icon="&#xf0c5;">Color</div>	
+				<div class="k_toolbar_tool" data-icon="&#xf0ce;">Table</div>	
 			</div>
-			<div class="k_tool_btn_grp">
-				<div class="k_tool_btn" data-icon="&#xf031;">Text</div>
-				<div class="k_tool_btn" data-icon="&#xf0c5;">Shape</div>
-				<div class="k_tool_btn" data-icon="&#xf121;">Embed</div>
+
+			<div class="k_toolbar_tools">
+				<div class="k_toolbar_tool" data-icon="&#xf031;">Text</div>	
+				<div class="k_toolbar_tool" data-icon="&#xf0c5;">Color</div>	
+				<div class="k_toolbar_tool" data-icon="&#xf0ce;">Table</div>	
 			</div>			
+			<div class="k_toolbar_tools">
+				<div class="k_toolbar_toggle">
+					<input type="checkbox" id="bold">
+					<label for="bold" class="k_toolbar_tool" data-icon="&#xf032;">Bold</label>					
+				</div>
+				<div class="k_toolbar_toggle">
+					<input type="checkbox" id="italic">
+					<label for="italic" class="k_toolbar_tool" data-icon="&#xf033;">Italic</label>					
+				</div>
+				<div class="k_toolbar_toggle">
+					<input type="checkbox" id="underline">
+					<label for="underline" class="k_toolbar_tool" data-icon="&#xf0cd;">Underline</label>					
+				</div>								
+			</div>			
+			<div class="k_toolbar_separator"></div>
+
 		</div>
 
 
