--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 			</div>
 		</div> -->
 
+		<h1>Select Dropdown</h1>
+		<div class="k_select">
+			<a class="k_option">Sumit</a>
+			<a class="k_option">Yaswanth</a>
+			<a class="k_option">Himanshu</a>
+			<a class="k_option">Sanjay</a>
+			<input type="text" value="None" data-value="None"/>
+		</div>
+
 		<h1>Toggle Buttons</h1>
 
 		<input type="checkbox" class="k_switch" name="check1" id="check1">
@@ -71,6 +80,7 @@
 			<label for="option3" class="k_btn_success">Option 3</label>
 		</div>
 
+
 		<div class="k_group_toggle">
 			<input type="radio" name="Conf" id="Conf1">
 			<label for="Conf1" class="k_btn_danger" data-icon="&#xf16b;">Dropbox</label>
@@ -79,6 +89,8 @@
 			<input type="radio" name="Conf" id="Conf3">
 			<label for="Conf3" class="k_btn_danger" data-icon="&#xf179;">Apple</label>
 		</div>
+
+
 
 		<h1>Input Icon</h1>
 		<div class="k_wrap_txt_addon">
