--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 			</div>
 		</div> -->
 
-		<h1>Select Dropdown</h1>
-		<div class="k_select">
-			<a class="k_option">Sumit</a>
-			<a class="k_option">Yaswanth</a>
-			<a class="k_option">Himanshu</a>
-			<a class="k_option">Sanjay</a>
-			<input type="text" value="None" data-value="None"/>
-		</div>
+		<h1>Shapes</h1>
+
+		<div class="shape_circle"></div>
+		<div class="shape_elipse"></div>
+		<div class="shape_skew"></div>
+		<div class="shape_triangle"></div>
+		<div class="shape_pac"></div>
+		<div class="shape_flag"></div>
+		<div class="yang"></div>
+		<div class="cone"></div>
 
 		<h1>Toggle Buttons</h1>
 
