--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<div class="shape_flag"></div>
 		<div class="yang"></div>
 		<div class="cone"></div>
+		<div class="cylinder"></div>
 
 		<h1>Toggle Buttons</h1>
 
