--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 			</div>
 		</div> -->
 
+		<h1>Shadows</h1>
+
+		<div class="box box1"></div>
+		<div class="box box2"></div>
+		<div class="box box2 box3"></div>	
+		<div class="box box3"></div>	
+
 		<h1>Shapes</h1>
 
 		<div class="shape_circle"></div>
